# Native-GLM-5.2-Provider

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/: AGENTS.md
.github/workflows/: ci.yml  release.yml
benchmarks/: AGENTS.md  cases.json  eval.py  run_live.py
glm_acp/: AGENTS.md  __init__.py  __main__.py  agent.py  checkpoints.py  cli.py  config.py  cron.py  cron_cli.py  cron_scheduler.py  failure_corpus.py  glm_client.py  launcher.py  mcp.py  memory.py  meta_learning.py  observability.py  references.py  release.py  repository_intelligence.py  session_store.py  terminal_cli.py  tools.py  tui.py  uninstall.py
registry/: AGENTS.md  agent.json
scripts/: AGENTS.md  install.ps1  install.sh
tests/: AGENTS.md  conftest.py  test_agent.py  test_cli.py  test_compaction.py  test_config.py  test_cron.py  test_glm_client.py  test_hardening_roadmap.py  test_installers.py  test_mcp.py  test_memory.py  test_quality.py  test_registry_package.py  test_release.py  test_repository_intelligence.py  test_safety_roadmap.py  test_session_store.py  test_stream_integration.py  test_terminal_cli.py  test_tools.py  test_tui.py  test_uninstall.py  test_voice.py
