[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glm-acp"
version = "0.1.0"
description = "Native ACP agent server for Z.ai GLM models, optimized for Zed"
requires-python = ">=3.10"
dependencies = [
    "agent-client-protocol>=0.0.2",
    "httpx>=0.27",
]

[project.scripts]
glm-acp = "glm_acp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["glm_acp"]
